// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inlineChangesHighlighted commit with a small diff 1`] = `
"
commit 26ca49fb83758bace20a473e231d576aa1bbe115                                                                         
Author: Shrey Banga <shrey@quip.com>                                                                                    
Date:   Tue May 23 16:47:17 2017 -0700                                                                                  
                                                                                                                        
    sonos to brew                                                                                                       
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ■■ Brewfile                                                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
@@ -19,2 +19,3 @@ brew 'python3'                                                                                        
   19    brew 'socat'                                          19    brew 'socat'                                       
                                                               20  + brew 'sonos'                                       
   20    brew 'terminal-notifier'                              21    brew 'terminal-notifier'                           
@@ -42,3 +43,2 @@ cask 'rescuetime'                                                                                     
   42    cask 'slate'                                          43    cask 'slate'                                       
   43  - cask 'sonos'                                                                                                   
   44    cask 'spotify'                                        44    cask 'spotify'                                     
"
`;

exports[`inlineChangesHighlighted commit with a small diff without a/ and b/ prefixs 1`] = `
"
commit 26ca49fb83758bace20a473e231d576aa1bbe115                                                                         
Author: Shrey Banga <shrey@quip.com>                                                                                    
Date:   Tue May 23 16:47:17 2017 -0700                                                                                  
                                                                                                                        
    sonos to brew                                                                                                       
                                                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ■■ Brewfile                                                                                                            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
@@ -19,2 +19,3 @@ brew 'python3'                                                                                        
   19    brew 'socat'                                          19    brew 'socat'     